<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.ChallengeActivity"
    android:id="@+id/challengeActivity">

    <ListView
        android:id="@+id/ParticipantsList"
        android:layout_width="match_parent"
        android:layout_height="489dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="287dp" />

    <EditText
        android:id="@+id/addParticipationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/addParticipationScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addParticipationName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="122dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="135dp"
        android:ems="10"
        android:hint="0"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/addParticipationButton"
        android:layout_width="116dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="133dp"
        android:layout_marginTop="199dp"
        android:layout_marginEnd="144dp"
        android:onClick="onSubmitParticipation"
        android:text="add Score" />

</RelativeLayout>