...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/challengeOverviewActivity"
    tools:context=".activitys.ChallengeOverviewActivity">

    <ListView
        android:id="@+id/listview"
        android:layout_width="402dp"
        android:layout_height="491dp"
        android:layout_below="@+id/buttonSearchForm"
        android:background="#66FFFFFF"
        android:drawSelectorOnTop="false"
        android:listSelector="@android:color/transparent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
