<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addChallengeForm"
    tools:context=".activitys.AddChallengeForm">


    <EditText
        android:id="@+id/challengeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="Challenge"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />


    <EditText
        android:id="@+id/challengeDescription"
        android:layout_width="211dp"
        android:layout_height="59dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="74dp"
        android:ems="10"
        android:hint="Description"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/postChallengeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/challengeName"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/postChallengeButton"
        android:layout_width="180dp"
        android:layout_height="68dp"
        android:layout_marginStart="134dp"
        android:layout_marginEnd="189dp"
        android:onClick="onAddChallenge"

        android:text="post Challenge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/challengeName"
        app:layout_constraintVertical_bias="0.293" />

</androidx.constraintlayout.widget.ConstraintLayout>